--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            {% if site.description %}
+              <p class="site-description">{{ site.description }}</p>
+            {% endif %}
           </div>
 
           <nav>
