--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -14,6 +14,7 @@
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
+    <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
 
         <!-- Twitter cards -->
